navbar z-index fixed, so there is button we can click to close sidebar

--- a/fully-banner/src/App.css
+++ b/fully-banner/src/App.css
@@ -88,7 +88,7 @@ flow of the document and other elements will behave as if it’s not even there 
 		left: 0;
 		right: 0;
 		width: 100%;
-		z-index: 1;
+		z-index: 70;
 		padding: 1em;
 		display: flex;
 		justify-content: space-between;
@@ -128,6 +128,11 @@ a:hover{
 	color: #FFC1B4 !important;
 	border-bottom: none;
 	text-decoration: none;
+}
+
+
+.textDiv{
+	margin-right: 2em;
 }
 .sidebar{
 	transition: transform 0.4s;
